fix and update likesong feature custom scrollbar, not fixed hieght yet

--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,29 @@ code {
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+@layer utilities {
+  .scrollbar::-webkit-scrollbar {
+    width: 6px;
+    height: 10px;
+  }
+
+  /* .scrollbar::-webkit-scrollbar-track {
+    border-radius: 100vh;
+    background: #f0f0f0;
+    opacity: 0;
+  } */
+
+  .scrollbar::-webkit-scrollbar-thumb {
+    background: rgba(255,255,255,0.3);
+    border-radius: 100vh;
+    height: 10px;
+    /* border: 3px solid #f6f7ed; */
+    cursor: pointer;
+  }
+
+  .scrollbar::-webkit-scrollbar-thumb:hover {
+    background: rgba(255,255,255,0.5);
+  }
+}
